--- a/site/scss/site-specific/_main.scss
+++ b/site/scss/site-specific/_main.scss
@@ -204,15 +204,16 @@ section.alternating-blocks {
 	+ section.alternating-blocks {
 		padding-top: $margin / 2;
 	}
-	.row {
-		@include respond($md) {
-			position: relative;
-		}
+	.flex-row {
+		// @include respond($md) {
+		// 	position: relative;
+		// }
+		align-items: center;
 		.col,
 		*[class^="col-"] {
 			.info {
 				div {
-					max-width: 350px;
+					max-width: 400px;
 					margin: 1rem 0 1rem;
 					@include respond($md) {
 						width: 80%;
@@ -254,32 +255,33 @@ section.alternating-blocks {
 				}
 			}
 			&:nth-child(even) {
-				@include respond($md) {
-					position: absolute !important;
-					height: 100%;
-				}
 				.info {
+					padding: 0 0 2rem;
 					@include respond($md) {
 						align-items: center;
 						display: flex;
 						height: 100%;
+						padding: 2rem 0;
 					}
 				}
 			}
 		}
 	}
+
 	&:nth-child(even) {
-		.row {
+		.flex-row {
 			.col,
 			*[class^="col-"] {
-				&:nth-child(odd) {
-					@include respond($md) {
-						float: right !important;
+				@include respond($md) {
+					order: 2;
+					&:nth-child(2) {
+						order: 1;
 					}
 				}
 			}
 		}
 	}
+
 }
 
 .thumb-title {
